welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value longueurTableau
  longueurTableau = nums.length
  ^indexOfValue:4: error: not found: value longueurTableau
  for (element <-0 to (longueurTableau -1)){
                       ^